Added new changes

--- a/Homework 9 Positions/Card2.html
+++ b/Homework 9 Positions/Card2.html
@@ -11,14 +11,14 @@
     <div class="box">
         
         <div class="image">
-            <img src="assets/images/i.webp" >
+            <img src="assets/images/0x0-kurtlar-vadisinin-palasi-gorenleri-sasirtti-1557288568743.jpg" >
         </div>
         <div class="info">
-            <span>Força Barça</span>
-            <h1>Mahir Cule</h1>
-            <span>Again prison, again prison, hey bro, hey bro! The better is the free life, hey bro, hey bro!</span><br><br><br>
-            <form action="https://www.youtube.com/watch?v=vstkv2WHHKQ">
-                <button id="button" role="button">Sing More!</button>
+            <span>07/03/1963 - ∞</span>
+            <h1>Pala</h1>
+            <span>Sadece ölüler görür!</span><br><br><br>
+            <form action="https://www.youtube.com/">
+                <button id="button" role="button">Öldür!</button>
             </form>
         </div>
         <div class="scroll">
